syntax = "proto2";
message SessionEvent {
    enum SessionEventType {
        SERVER_IDENTIFICATION = 500;
        SERVER_COMPLETE_LIST = 600;
        SERVER_MESSAGE = 1000;
        SERVER_SHUTDOWN = 1001;
        CONNECTION_CLOSED = 1002;
        USER_MESSAGE = 1003;
        LIST_ROOMS = 1004;
        ADD_TO_LIST = 1005;
        REMOVE_FROM_LIST = 1006;
        USER_JOINED = 1007;
        USER_LEFT = 1008;
        GAME_JOINED = 1009;
        NOTIFY_USER = 1010;
        REPLAY_ADDED = 1100;
    }
    extensions 100 to max;
}
